styles.css
head{
    text-align: center;
}
p{
    text-align: center;
}

body{
    color:rgb(0, 0, 0);
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    margin: 0;
}
h1{
    background-color: rgb(0, 162, 255);
    width: 800px;
    margin: 0 auto;
    padding: 30px;
    border-left: 3px double white;
    border-right: 3px double white;
}
h2{
    font-size: 1.25em;
    text-align:center
}

#sidebar{
    border-radius: 20px;
    float: right;
    margin: 30px 30px 0 100px;
}

/* make sure headings clear floated sidebar */
h2{
    font-size: 1.25em;
    text-align:center;
    clear: both;
}

h3{
    background-color: rgb(255, 255, 255);
    font-size: 1.3em;
    color: black;
    text-align: center;
}
#sidebar h3{
    border-left: none;
    border-radius: 0;;
}
ul{
    line-height: 3em;
}
li{
    font-size: 1.1em
}

.pics {
    width: 500px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    border:rgb(0, 0, 0) 3px solid;
    
    
}

.center-box {
    width: 600px;       /* or whatever fits your layout */
    margin: 0 auto;     /* left/right auto centers the block */
    padding: 20px;
    border: 2px solid #000;
}

/* 2. center all the text inside it */
.center-box {
    text-align: center;
}

